--- a/docs/source/documentation/2-docsearch-scraper/2-config-options.html.md.erb
+++ b/docs/source/documentation/2-docsearch-scraper/2-config-options.html.md.erb
@@ -341,6 +341,14 @@ Default is `0`.
 This object is [any custom Algolia settings](https://www.algolia.com/doc/api-client/settings/#the-scope-of-settings-and-parameters) you would like to pass to the index
 settings. You will [look under the hood of algolia](https://www.algolia.com/doc/).
 
+### `nb_hits_max` _Optional_
+
+The number of maximum records allowed for the whole indexing. If the scrapping is bigger, it will fail.
+
+This value is not meant to be set from anyone except DocSearch maintaner.
+
+Default is `600 000` (arbitrary, might change)
+
 ## Possible issues
 
 ### Duplicated content
