fix redirect issue on firefox. Fixes #272

--- a/docs/source/templates/redirect.html.erb
+++ b/docs/source/templates/redirect.html.erb
@@ -2,7 +2,7 @@
 <head>
   <base href="<%= app.config[:stage] == 'production' ? 'https://community.algolia.com/docsearch/': '/' %>">
   <link rel=canonical href="<%= url %>"/>
-  <meta http-equiv=refresh content="0; url=<%= url %>"/>
+  <meta http-equiv=refresh content="0; url=<%= app.config[:stage] == 'production' ? 'https://community.algolia.com/docsearch/': '/' %><%= url %>"/>
   <meta name=robots content="noindex,follow"/>
   <meta http-equiv=cache-control content=no-cache />
 </head>
