doc(site): Fixed typos

--- a/src/styles/_searchbox.scss
+++ b/src/styles/_searchbox.scss
@@ -127,7 +127,7 @@
         left: 0;
       }
 
-      // Helper for vertical alignement of the icon
+      // Helper for vertical alignment of the icon
       &::before {
         display: inline-block;
         margin-right: -4px;
