Revert "doc(site): Fixed typos (#277)"
This reverts commit d3f0aaca8552863719359f3d4a22bf6526152772.

--- a/docs/source/assets/stylesheets/_searchbar.scss
+++ b/docs/source/assets/stylesheets/_searchbar.scss
@@ -115,7 +115,7 @@ $custom:(
     text-align: center;
     user-select: none;
 
-    // Helper for vertical alignment of the icon
+    // Helper for vertical alignement of the icon
     &::before {
       display: inline-block;
       margin-right: -4px;
