--- a/docs/source/documentation/3-docsearch-autocomplete/1-customize-autocomplete-styles.html.md.erb
+++ b/docs/source/documentation/3-docsearch-autocomplete/1-customize-autocomplete-styles.html.md.erb
@@ -34,7 +34,7 @@ set white and purple colors.
 .algolia-docsearch-suggestion--highlight {
   color: #3A33D1;
 }
-/* Highlighted search terms in the main category headers */
+/* Highligted search terms in the main category headers */
 .algolia-docsearch-suggestion--category-header .algolia-docsearch-suggestion--highlight  {
   background-color: #4D47D5;
 }
